fix[tracking-url]: truncate name in action summary

--- a/packages/tracking-url/src/app/action-summary/action-summary.component.scss
+++ b/packages/tracking-url/src/app/action-summary/action-summary.component.scss
@@ -16,3 +16,7 @@ $radius: 5px;
 .divider {
   border: 1px solid #bfbfbf;
 }
+
+.truncate {
+  max-width: 140px;
+}
